--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ fastapi==0.112.0
 fastapi-cli==0.0.5
 openai==1.38.0
 python-dotenv==1.0.1
-tqdm==4.66.5
 uvicorn==0.30.5
 uvloop==0.19.0
 websockets==12.0
+tqdm
 PyGithub
