--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-OPENAI_API_KEY = ***********************************
-CRYPTOGRAPHY_KEY = ***********************************
+OPENAI_API_KEY = <openai-key>
+CRYPTOGRAPHY_KEY = <encode-decode-data-key>
+MASTER_KEY = <server-master-key>
+
+#Variables that will only be used during development and testing
+MY_USER_KEY = <user-key>
+GITHUB_KEY = <github-token>
+GITHUB_USER = <github-user>
+GITHUB_REPO = <github-repo>
